// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select.vue multiple template work render work 1`] = `
"<div class=\\"ix-select ix-select-multiple ix-select-searchable ix-select-medium\\">
  <div class=\\"ix-select-selector\\">
    <div class=\\"ix-select-input\\"><input class=\\"ix-select-input-inner\\" autocomplete=\\"off\\"><span class=\\"ix-select-input-mirror\\" aria-hidden=\\"true\\"></span></div>
    <div class=\\"ix-select-placeholder\\"></div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`Select.vue render options work group options work 1`] = `
"<div class=\\"ix-select ix-select-single ix-select-show-suffix ix-select-medium\\">
  <div class=\\"ix-select-selector\\">
    <div class=\\"ix-select-item\\"><span class=\\"ix-select-item-label\\">Tom0</span>
      <!--v-if-->
    </div>
    <div class=\\"ix-select-input\\"><input class=\\"ix-select-input-inner\\" autocomplete=\\"off\\" style=\\"opacity: 0;\\">
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div class=\\"ix-select-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" arialabel=\\"down\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"64 64 896 896\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" fill=\\"currentColor\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
        <path d=\\"M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z\\"></path>
      </svg></i></div>
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`Select.vue render options work render work 1`] = `
"<div class=\\"ix-select ix-select-single ix-select-show-suffix ix-select-medium\\">
  <div class=\\"ix-select-selector\\">
    <div class=\\"ix-select-input\\"><input class=\\"ix-select-input-inner\\" autocomplete=\\"off\\" style=\\"opacity: 0;\\">
      <!--v-if-->
    </div>
    <div class=\\"ix-select-placeholder\\"></div>
  </div>
  <div class=\\"ix-select-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" arialabel=\\"down\\"></i></div>
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`Select.vue single template work group options work 1`] = `
"<div class=\\"ix-select ix-select-single ix-select-show-suffix ix-select-medium\\">
  <div class=\\"ix-select-selector\\">
    <div class=\\"ix-select-item\\"><span class=\\"ix-select-item-label\\">Tom0</span>
      <!--v-if-->
    </div>
    <div class=\\"ix-select-input\\"><input class=\\"ix-select-input-inner\\" autocomplete=\\"off\\" style=\\"opacity: 0;\\">
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <div class=\\"ix-select-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" arialabel=\\"down\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"64 64 896 896\\" width=\\"1em\\" height=\\"1em\\" focusable=\\"false\\" fill=\\"currentColor\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
        <path d=\\"M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z\\"></path>
      </svg></i></div>
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`Select.vue single template work render work 1`] = `
"<div class=\\"ix-select ix-select-single ix-select-show-suffix ix-select-medium\\">
  <div class=\\"ix-select-selector\\">
    <div class=\\"ix-select-input\\"><input class=\\"ix-select-input-inner\\" autocomplete=\\"off\\" style=\\"opacity: 0;\\">
      <!--v-if-->
    </div>
    <div class=\\"ix-select-placeholder\\"></div>
  </div>
  <div class=\\"ix-select-suffix\\"><i class=\\"ix-icon ix-icon-down\\" role=\\"img\\" arialabel=\\"down\\"></i></div>
  <!--v-if-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;
